# mapped

./: .dockerignore  CMakeLists.txt  LICENSE  README.md
docs/: building.md
include/my_desktop_app/: app.h
src/: app.cpp  main.cpp
src/core/: data_model.cpp  data_model.h  map_layer.h
src/platform/: platform_linux.cpp  platform_macos.cpp  platform_windows.cpp
src/ui/: main_window.cpp  main_window.h
tests/: CMakeLists.txt
tests/unit/: test_data_model.cpp
